--- a/SRC/trunk/settingpage.ui
+++ b/SRC/trunk/settingpage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>480</height>
+    <width>510</width>
+    <height>507</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,14 +17,14 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>20</y>
-      <width>471</width>
-      <height>351</height>
+      <x>60</x>
+      <y>10</y>
+      <width>391</width>
+      <height>451</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
+     <item alignment="Qt::AlignHCenter">
       <widget class="QLabel" name="MainTitle">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -33,12 +33,12 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:18pt; font-weight:600; color:#ad0400;&quot;&gt;Age of Empires&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:18pt; font-weight:600; color:#ad0400;&quot;&gt;帝国时代&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:18pt; font-weight:600; color:#ad0400;&quot;&gt;History of Land&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:20pt; font-weight:600; color:#ad0400;&quot;&gt;千古江山&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="startGame">
+      <widget class="QPushButton" name="customLand">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
          <horstretch>0</horstretch>
@@ -68,6 +68,40 @@ color:rgb(185, 40, 35);
        </property>
        <property name="text">
         <string>自定义英雄属性</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="About">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>30</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>11</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton {
+ background-color: rgb(245,231,211); 
+border-radius: 20px; 
+color:rgb(0, 0, 0); 
+} 
+
+QPushButton:hover 
+{ 
+background-color:rgb(222,176,159); 
+color:rgb(185, 40, 35); 
+}</string>
+       </property>
+       <property name="text">
+        <string>关于游戏</string>
        </property>
       </widget>
      </item>
