--- a/SRC/trunk/Game.ui
+++ b/SRC/trunk/Game.ui
@@ -27,51 +27,12 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>280</x>
-      <y>70</y>
-      <width>131</width>
-      <height>111</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset resource="gamepageicon.qrc">
-      <normaloff>:/gpicon/images/icon/GamePage_attack.png</normaloff>:/gpicon/images/icon/GamePage_attack.png</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>64</width>
-      <height>64</height>
-     </size>
-    </property>
-    <property name="flat">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="ProcessStatus">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>170</y>
-      <width>81</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>进行战斗</string>
-    </property>
-   </widget>
    <widget class="QTextEdit" name="History">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>320</y>
-      <width>541</width>
+      <x>30</x>
+      <y>310</y>
+      <width>691</width>
       <height>131</height>
      </rect>
     </property>
@@ -79,10 +40,10 @@
    <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>370</y>
-      <width>16</width>
-      <height>16</height>
+      <x>720</x>
+      <y>10</y>
+      <width>20</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -171,6 +132,93 @@
       <string/>
      </property>
     </column>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>160</y>
+      <width>81</width>
+      <height>94</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="ThinRedlLayout">
+     <item>
+      <widget class="QPushButton" name="ThinRedBTN">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="gamepageicon.qrc">
+         <normaloff>:/gpicon/images/Game/ThinRedLine.png</normaloff>:/gpicon/images/Game/ThinRedLine.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>64</width>
+         <height>64</height>
+        </size>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="ThinRedTips">
+       <property name="text">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; color:#ff5500;&quot;&gt;细细的红线&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>10</y>
+      <width>101</width>
+      <height>95</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="DirectATKLayout">
+     <item>
+      <widget class="QPushButton" name="DirectATKBTN">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="gamepageicon.qrc">
+         <normaloff>:/gpicon/images/icon/GamePage_attack.png</normaloff>:/gpicon/images/icon/GamePage_attack.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>64</width>
+         <height>64</height>
+        </size>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="DirectATKTips">
+       <property name="text">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;直接攻城&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::RichText</enum>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
